--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -13,3 +13,13 @@
   year      = {2009},
   url       = {http://developers.facebook.com/blog/post/301/},
 }
+
+@Article{kalman,
+  author = {R. E. Kalman},
+  year = {1960},
+  title = {A new approach to linear filtering and prediction problems},
+  journal = {Journal of Basic Engineering},
+  volume = {82},
+  number = {1},
+  pages = {35--45},
+}
