Cleaning up bib processing

--- a/paper/fraiche.tex
+++ b/paper/fraiche.tex
@@ -257,6 +257,6 @@ compare with other watering systems (ETO)
 13.	Tolle, G., Polastre, J., Szewczyk, R., and Culler, D. A macroscope in the redwoods. (2005).\\
 14.	Waldspurger, C.A. and Weihl, W.E. Lottery Scheduling: Flexible Proportional-Share Resource Management. (1994).
 
-\bibliography{bib}
+\bibliography{fraiche}
 \bibliographystyle{plainnat}
 \end{document}
