Wrote prose for results

--- a/paper/fraiche.bib
+++ b/paper/fraiche.bib
@@ -14,6 +14,20 @@
   url       = {http://developers.facebook.com/blog/post/301/},
 }
 
+@ONLINE{Splinter,
+  author    = {Francisco Souza},
+  title     = {Splinter},
+  year      = {2012},
+  url       = {http://splinter.cobrateam.info/docs/},
+}
+
+@ONLINE{phantomjs,
+  author    = {Ariya Hidayat},
+  title     = {PhantomJS},
+  year      = {2012},
+  url       = {http://phantomjs.org/},
+}
+
 @Article{kalman,
   author = {R. E. Kalman},
   year = {1960},
